<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="3dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="6dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" >
        </TextView>

        <RadioGroup
            android:id="@+id/transType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/transTypeK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/do_ask" >
            </RadioButton>

            <RadioButton
                android:id="@+id/transTypeS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_bid" >
            </RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/share" >
        </TextView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/transWalor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapCharacters"
                android:singleLine="true"
                android:text="" >
            </EditText>

            <Button
                android:id="@+id/transWalorBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/list" >
            </Button>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" >
        </TextView>

        <EditText
            android:id="@+id/transIlosc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="" >
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote" >
        </TextView>

        <EditText
            android:id="@+id/transKurs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="" >
        </EditText>

        <Button
            android:id="@+id/transDodaj"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_transaction" >
        </Button>
    </LinearLayout>

</ScrollView>