<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="horizontal"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="70dip"
            android:layout_height="fill_parent"
            android:layout_marginRight="2dip"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_gravity="top"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon"
                android:contentDescription="@string/logo_maklera"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:gravity="center_horizontal"
                android:text="@string/we_do_recommend"
                android:textSize="11.5sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/taxity"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_gravity="top"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/taxity"
                android:contentDescription="@string/taxity"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/taxity"
                android:textSize="11.5sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11.5sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/about_text"
                android:textSize="12.5sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/about_code_copyright"
                android:textSize="11.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/about_art_copyright"
                android:textSize="11.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/about_url"
                android:textSize="11.0sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>