<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:paddingLeft="5dip">

	<RelativeLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
		    android:id="@+id/walletItemSymbol"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="7dip"
		    android:text="@string/quote_symbol_placeholder"
		    android:textColor="#ffaa56"
		    android:textSize="30sp" >
		</TextView>

		<TextView android:text="@string/quote_name_placeholder" android:id="@+id/walletItemName"
			android:paddingTop="39dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="12sp"
			android:textColor="#0099CC" android:paddingLeft="2dip"></TextView>
	</RelativeLayout>

	<LinearLayout android:layout_height="wrap_content"
		android:gravity="left" android:layout_width="fill_parent">
		<TableLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingLeft="5dip"
			android:gravity="center_vertical">
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/amount"
					android:textColor="#ffffff" android:textSize="12sp">
				</TextView>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/integer_placeholder"
					android:textColor="#ffffff" android:textSize="12sp"
					android:id="@+id/walletItemQuantity">
				</TextView>
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/ask"
					android:textColor="#ffffff" android:textSize="12sp">
				</TextView>

				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/integer_placeholder"
					android:textColor="#ffffff" android:textSize="12sp" android:id="@+id/walletItemAvg">
				</TextView>
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/gain"
					android:textColor="#ffffff" android:textSize="12sp">
				</TextView>

				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/integer_placeholder"
					android:textColor="#ffffff" android:textSize="12sp" android:id="@+id/walletItemGain">
				</TextView>
			</TableRow>
		</TableLayout>

		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="right">
			<TextView android:id="@+id/walletItemKurs"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="left" android:textColor="#FFFFFF" android:text="@string/float_placeholder"
				android:textSize="30sp" android:paddingTop="7dip"></TextView>
			<LinearLayout android:layout_marginTop="10dip"
				android:layout_width="70dp" android:layout_height="30dp"
				android:layout_gravity="center_vertical" android:layout_marginLeft="6dip"
				android:background="@drawable/bluebox" android:layout_toRightOf="@id/walletItemKurs">
				<TextView android:text="@string/percent_float" android:id="@+id/walletItemZmiana"
					android:textSize="16sp" android:layout_width="fill_parent"
					android:layout_height="fill_parent" android:textColor="#FFFFFF"
					android:textStyle="bold" android:paddingTop="4dp"
					android:paddingLeft="5dp"></TextView>
			</LinearLayout>
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>