<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dip" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/quoteItemUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dip"
            android:text="@string/datetime_placeholder"
            android:textColor="#FFFFFF"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/quoteItemSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="7dip"
            android:text="@string/quote_symbol_placeholder"
            android:textColor="#ffaa56"
            android:textSize="30sp" >
        </TextView>

        <TextView
            android:id="@+id/quoteItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dip"
            android:paddingTop="41dip"
            android:text="@string/quote_name_placeholder"
            android:textColor="#0099CC"
            android:textSize="12sp" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/quoteItemKursMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="2dip"
                android:text="@string/min_quote_placeholder"
                android:textColor="#FFFFFF"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/quoteItemKurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="7dip"
                android:text="@string/float_placeholder"
                android:textColor="#FFFFFF"
                android:textSize="30sp" >
            </TextView>

            <TextView
                android:id="@+id/quoteItemKursMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="2dip"
                android:paddingTop="41dip"
                android:text="@string/max_quote_placeholder"
                android:textColor="#FFFFFF"
                android:textSize="12sp" >
            </TextView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dip"
            android:background="@drawable/redbox" >

            <TextView
                android:id="@+id/quoteItemZmiana"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="5dp"
                android:paddingTop="4dp"
                android:text="@string/percent_float"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>