<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout android:layout_width="fill_parent" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/quoteDetailUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dip"
                android:text="@string/datetime_placeholder"
                android:textColor="#FFFFFF"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/quoteDetailSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dip"
                android:text="@string/quote_symbol_placeholder"
                android:textColor="#ffaa56"
                android:textSize="30sp" >
            </TextView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/quoteDetailKursMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="2dip"
                    android:text="@string/min_quote_placeholder"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" >
                </TextView>

                <TextView
                    android:id="@+id/quoteDetailKurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingTop="7dip"
                    android:text="@string/quote_placeholder"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" >
                </TextView>

                <TextView
                    android:id="@+id/quoteDetailKursMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="2dip"
                    android:paddingTop="41dip"
                    android:text="@string/max_quote_placeholder"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" >
                </TextView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dip"
                android:background="@drawable/bluebox" >

                <TextView
                    android:id="@+id/quoteDetailZmiana"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="5dp"
                    android:paddingTop="4dp"
                    android:text="@string/percent_float"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="2dip"
            android:text="@string/ref_quote"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/quoteDetailKursOdn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/float_placeholder" >
        </TextView>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="2dip"
            android:text="@string/turnover_value"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/quoteDetailWartosc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/float_placeholder" >
        </TextView>
    </TableRow>

    <LinearLayout
        android:id="@+id/graphParent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
    </LinearLayout>

</TableLayout>