<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/accountStateTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="2dip"
                android:text="@string/avail_for_orders"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/accountStateAvail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/float_placeholder" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="2dip"
                android:text="@string/base_account"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/accountStateMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/float_placeholder" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="2dip"
                android:text="@string/amount_due"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/accountStateCharges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/float_placeholder" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="2dip"
                android:text="@string/shares_value"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/accountStatePaperValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/float_placeholder" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="#848284" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:padding="2dip"
                android:text="@string/owned_shares"
                android:textColor="#FFFFFF"
                android:textStyle="bold" >
            </TextView>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/noPapers"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:paddingTop="2dip"
        android:text="@string/you_dont_have_any_papers"
        android:visibility="gone" >
    </TextView>

    <ListView
        android:id="@+id/accountStatePapers"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>